force-app/main/default/objects/Carrier__c.object
<CustomObject>
    <fields>
        <fullName>BilbaoCode__c</fullName>
        <label>Código Bilbao</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Empresa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Energía</fullName>
                </value>
                <value>
                    <fullName>Suministro</fullName>
                </value>
                <value>
                    <fullName>Distribución</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLHCode__c</fullName>
        <label>Código CLH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarrierCode__c</fullName>
        <label>Código transportista</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MotrilCode__c</fullName>
        <label>Código Motril</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OcanaCode__c</fullName>
        <label>Código Ocaña</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Teléfono</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TancarCode__c</fullName>
        <label>Código Tancar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Transportista</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>CarrierCode__c</columns>
        <columns>BilbaoCode__c</columns>
        <columns>CLHCode__c</columns>
        <columns>MotrilCode__c</columns>
        <columns>OcanaCode__c</columns>
        <columns>TancarCode__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>Distribucion</fullName>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>CarrierCode__c</columns>
        <columns>BilbaoCode__c</columns>
        <columns>CLHCode__c</columns>
        <columns>MotrilCode__c</columns>
        <columns>OcanaCode__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business__c</field>
            <operation>equals</operation>
            <value>Distribución</value>
        </filters>
        <label>Distribución</label>
    </listViews>
    <listViews>
        <fullName>Energia</fullName>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>CarrierCode__c</columns>
        <columns>BilbaoCode__c</columns>
        <columns>CLHCode__c</columns>
        <columns>MotrilCode__c</columns>
        <columns>OcanaCode__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business__c</field>
            <operation>equals</operation>
            <value>Energía</value>
        </filters>
        <label>Energía</label>
    </listViews>
    <listViews>
        <fullName>Suministro</fullName>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>CarrierCode__c</columns>
        <columns>BilbaoCode__c</columns>
        <columns>CLHCode__c</columns>
        <columns>MotrilCode__c</columns>
        <columns>OcanaCode__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business__c</field>
            <operation>equals</operation>
            <value>Suministro</value>
        </filters>
        <label>Suministro</label>
    </listViews>
    <nameField>
        <label>Transportista</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transportistas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>